<resources>
    <string name="app_name">projeto_dam</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmento2">Galeria</string>
    <string name="fragmento3">Sobre</string>
    <string name="fragmento4">Fotos publicadas</string>
    <string name="cam">📸</string>
    <string name="foto">Tirar foto</string>
    <string name="sobre">
        Engenharia informática \n
        Desenvolvimento de Aplicações Móveis 2023/2024 \n
        Hugo Marques: nº 24171
        Luis Pedro Torres: nº 15454

    </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="publicar_bt">Publicar</string>
    <string name="voltar_bt">Voltar</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."

    </string>
    <string name="ver_fotos">Ver fotos</string>
    <string name="registar">Registar</string>

</resources>