<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="25pt"
        android:paddingTop="5dp"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="18pt"
        android:singleLine="true"
        android:textAlignment="center"
        android:importantForAutofill="no"
        android:nextFocusDown="@id/Password"
        >
    </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30pt"
            android:textSize="18pt"
            android:inputType="textWebPassword"
            android:id="@+id/Password"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:paddingTop="10dp"
            android:hint="@string/password"
            android:layout_below="@id/Username"
            android:textAlignment="center"
            android:importantForAutofill="no"
            >
        </EditText>





    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        app:cardElevation="8dp">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/dark_blue"
            app:tabIndicatorColor="@color/white"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cam" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragmento2" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragmento3" />
        </com.google.android.material.tabs.TabLayout>

    </androidx.cardview.widget.CardView>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
